fix: add border-radius to scrollbar thumb for improved aesthetics

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-thumb {
   appearance: none;
   width: 15px;
+  border-radius: 10px;
   background-color: rgb(63, 63, 255);
 }
 
